[tests] Enable BookKeeper NativeIO feature in order to make the tests pass